--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "phpdark/pathway",
+    "name": "phpdark/fileway",
     "description": "This is a test repo",
     "type": "library",
     "license": "MIT",
